tests/src/frontend/typechecking/invalid/collection_literal_type_arg_mismatch_vector_array.sk
// in collection literal expressions,
// check explicit type args against contents.
//
// 4 collection literal cases:
// {Array, non-Array} x {array syntax, map syntax}
//
// Array, array syntax:
//
fun main(): void {
  _ = Array<Int>[1, 2, 3]; // ok
  _ = Array<String>[1, 2, 3]; // error
  print_string("Fail")
}
